making sure fixyou build and lib is running fine on jdk8